# AdventOfCode

./: README.md
2024-rust/: Cargo.toml  README.md
2024-rust/src/: file_io.rs  main.rs  server_io.rs
2024-rust/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
2025-elixir/: .gitignore  README.md  generate.exs  mix.exs
2025-elixir/lib/: entrypoint.ex  server_io.ex
2025-elixir/lib/solutions/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex  day13.ex  day14.ex  day15.ex  day16.ex  day17.ex  day18.ex  day19.ex  day20.ex  day21.ex  day22.ex  day23.ex  day24.ex  day25.ex
rust/: .gitignore  Cargo.toml
rust/src/: main.rs
