[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1.11.1"
itertools = "0.13.0"
rayon = "1.10.0"
phf = { version = "0.11.2", features = ["macros"] }
memoize = "0.4.2"
